# xcontrol

./: README.md  index.html  package.json  pnpm-lock.yaml  services.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
