[package]
name = "xcontrol"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "^2.0.0-rc", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }  # 用于序列化事件数据
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
encoding_rs = "0.8"
tauri-plugin-single-instance = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "errhandlingapi"] }

[profile.release]
lto = true 
codegen-units = 1
panic = "abort"
strip = true 
